--- a/OWolverine/OWolverine.csproj
+++ b/OWolverine/OWolverine.csproj
@@ -5,6 +5,13 @@
     <UserSecretsId>aspnet-OWolverine-EAD898D8-9331-4847-BBF4-C1A23A88B477</UserSecretsId>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="Models\StellarView\**" />
+    <Content Remove="Models\StellarView\**" />
+    <EmbeddedResource Remove="Models\StellarView\**" />
+    <None Remove="Models\StellarView\**" />
+  </ItemGroup>
+
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
@@ -21,10 +28,6 @@
   <ItemGroup>
     <ProjectReference Include="..\CSharpUtilities\CSharpUtilities.csproj" />
     <ProjectReference Include="..\OgameApiBLL\OgameApiBLL.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Models\StellarView\" />
   </ItemGroup>
 
 </Project>
